--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1168,4 +1168,7 @@ th{
 th, td{
   padding: 0.7em;
   text-align: center;
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
 }
