--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1189,12 +1189,12 @@ th, td{
 }
 
 .button1 {
-  background-color: white;
-  color: black;
+  background-color: ghostwhite;
+  color: #ffffff;
   border: 2px solid #008CBA;
 }
 
 .button1:hover {
-  background-color: #008CBA;
-  color: white;
+  background-color: #97bef3;
+  color: #ffffff;
 }
